--- a/pokeBuilderFE/src/index.css
+++ b/pokeBuilderFE/src/index.css
@@ -1,7 +1,6 @@
-body {
+body{
+  background-color: black;
   margin: 0;
-  height: 100vh;
-  width: 100vw;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
